<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="54dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/add_ingredient_header"
            android:textSize="38sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:text="@string/add_ingredient_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/ingredient_label"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:helperText="Add title"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/add_ingredient_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:elegantTextHeight="true"
            android:text="@string/add_button"
            android:textAllCaps="false"
            android:textSize="31sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/ingredient_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/cancel_button"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="31sp"
            app:cornerRadius="80dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/add_button"
            app:strokeColor="@color/blue"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>